@@ -2389,9 +2389,7 @@ _pack_job_desc_msg(job_desc_msg_t * job_desc_ptr, Buf buffer)
 	pack32(job_desc_ptr->group_id, buffer);
 
 	pack16(job_desc_ptr->alloc_resp_port, buffer);
-	packstr(job_desc_ptr->alloc_resp_hostname, buffer);
 	pack16(job_desc_ptr->other_port, buffer);
-	packstr(job_desc_ptr->other_hostname, buffer);
 	packstr(job_desc_ptr->network, buffer);
 	pack_time(job_desc_ptr->begin_time, buffer);
 
@@ -2520,11 +2518,7 @@ _unpack_job_desc_msg(job_desc_msg_t ** job_desc_buffer_ptr, Buf buffer)
 	safe_unpack32(&job_desc_ptr->group_id, buffer);
 
 	safe_unpack16(&job_desc_ptr->alloc_resp_port, buffer);
-	safe_unpackstr_xmalloc(&job_desc_ptr->alloc_resp_hostname,
-			       &uint16_tmp, buffer);
 	safe_unpack16(&job_desc_ptr->other_port, buffer);
-	safe_unpackstr_xmalloc(&job_desc_ptr->other_hostname,
-			       &uint16_tmp, buffer);
 	safe_unpackstr_xmalloc(&job_desc_ptr->network, &uint16_tmp, buffer);
 	safe_unpack_time(&job_desc_ptr->begin_time, buffer);
 
@@ -2559,8 +2553,6 @@ unpack_error:
 	xfree(job_desc_ptr->in);
 	xfree(job_desc_ptr->out);
 	xfree(job_desc_ptr->work_dir);
-	xfree(job_desc_ptr->alloc_resp_hostname);
-	xfree(job_desc_ptr->other_hostname);
 	xfree(job_desc_ptr->network);
 	xfree(job_desc_ptr->mail_user);
 	xfree(job_desc_ptr);
