@@ -105,7 +105,6 @@ int main(int argc, char *argv[])
 
 	/* create message thread to handle pings and such from slurmctld */
 	msg_thr = msg_thr_create(&desc.other_port);
-	desc.other_hostname = xshort_hostname();
 
 	xsignal(SIGHUP, _signal_while_allocating);
 	xsignal(SIGINT, _signal_while_allocating);
