@@ -464,19 +464,29 @@ static void _slurm_rpc_allocate_resources(slurm_msg_t * msg)
 	bool do_unlock = false;
 	bool job_waiting = false;
 	struct job_record *job_ptr;
+	uint16_t port;	/* dummy value */
+	slurm_addr resp_addr;
 
 	START_TIMER;
 	debug2("Processing RPC: REQUEST_RESOURCE_ALLOCATION");
 
 	/* do RPC call */
-	dump_job_desc(job_desc_msg);
 	uid = g_slurm_auth_get_uid(msg->auth_cred);
-	if ( (uid != job_desc_msg->user_id) && (!validate_super_user(uid)) ) {
+	if ((uid != job_desc_msg->user_id) && (!validate_super_user(uid))) {
 		error_code = ESLURM_USER_ID_MISSING;
 		error("Security violation, RESOURCE_ALLOCATE from uid=%u",
-		      (unsigned int) uid);
+			(unsigned int) uid);
 	}
-
+	if ((job_desc_msg->alloc_node == NULL)
+	||  (job_desc_msg->alloc_node[0] == '\0')) {
+		error_code = ESLURM_INVALID_NODE_NAME;
+		error("REQUEST_RESOURCE_ALLOCATE lacks alloc_node from uid=%u",
+			(unsigned int) uid);
+	}
+	slurm_get_peer_addr(msg->conn_fd, &resp_addr);
+	job_desc_msg->resp_host = xmalloc(16);
+	slurm_get_ip_str(&resp_addr, &port, job_desc_msg->resp_host, 16);
+	dump_job_desc(job_desc_msg);
 	if (error_code == SLURM_SUCCESS) {
 		do_unlock = true;
 		lock_slurmctld(job_write_lock);
@@ -1150,19 +1160,29 @@ static void _slurm_rpc_job_will_run(slurm_msg_t * msg)
 	slurmctld_lock_t job_write_lock = { 
 		NO_LOCK, WRITE_LOCK, READ_LOCK, READ_LOCK };
 	uid_t uid;
+	uint16_t port;	/* dummy value */
+	slurm_addr resp_addr;
 
 	START_TIMER;
 	debug2("Processing RPC: REQUEST_JOB_WILL_RUN");
 
 	/* do RPC call */
-	dump_job_desc(job_desc_msg);
 	uid = g_slurm_auth_get_uid(msg->auth_cred);
 	if ( (uid != job_desc_msg->user_id) && (!validate_super_user(uid)) ) {
 		error_code = ESLURM_USER_ID_MISSING;
 		error("Security violation, JOB_WILL_RUN RPC from uid=%u",
-		      (unsigned int) uid);
+			(unsigned int) uid);
 	}
-
+	if ((job_desc_msg->alloc_node == NULL)
+	||  (job_desc_msg->alloc_node[0] == '\0')) {
+		error_code = ESLURM_INVALID_NODE_NAME;
+		error("REQUEST_JOB_WILL_RUN lacks alloc_node from uid=%u",
+			(unsigned int) uid);
+	}
+	slurm_get_peer_addr(msg->conn_fd, &resp_addr);
+	job_desc_msg->resp_host = xmalloc(16);
+	slurm_get_ip_str(&resp_addr, &port, job_desc_msg->resp_host, 16);
+	dump_job_desc(job_desc_msg);
 	if (error_code == SLURM_SUCCESS) {
 		lock_slurmctld(job_write_lock);
 		error_code = job_allocate(job_desc_msg, 
@@ -1712,13 +1732,19 @@ static void _slurm_rpc_submit_batch_job(slurm_msg_t * msg)
 
 	slurm_msg_t_init(&response_msg);
 	/* do RPC call */
-	dump_job_desc(job_desc_msg);
 	uid = g_slurm_auth_get_uid(msg->auth_cred);
 	if ( (uid != job_desc_msg->user_id) && (!validate_super_user(uid)) ) {
 		error_code = ESLURM_USER_ID_MISSING;
 		error("Security violation, SUBMIT_JOB from uid=%u",
-		      (unsigned int) uid);
+			(unsigned int) uid);
 	}
+	if ((job_desc_msg->alloc_node == NULL)
+	||  (job_desc_msg->alloc_node[0] == '\0')) {
+		error_code = ESLURM_INVALID_NODE_NAME;
+		error("REQUEST_SUBMIT_BATCH_JOB lacks alloc_node from uid=%u",
+			(unsigned int) uid);
+	}
+	dump_job_desc(job_desc_msg);
 	if (error_code == SLURM_SUCCESS) {
 		lock_slurmctld(job_write_lock);
 		if (job_desc_msg->job_id != SLURM_BATCH_SCRIPT) {
