@@ -356,10 +356,9 @@ struct job_record {
 	slurm_addr *node_addr;		/* addresses of the nodes allocated to 
 					 * job */
 	List step_list;			/* list of job's steps */
+	char *resp_host;		/* host for srun communications */
 	uint16_t alloc_resp_port;	/* RESPONSE_RESOURCE_ALLOCATION port */
-	char *alloc_resp_host;		/* RESPONSE_RESOURCE_ALLOCATION host */
 	uint16_t other_port;		/* port for client communications */
-	char *other_host;		/* host for client communications */
 	char *account;			/* account number to charge */
 	char *comment;			/* arbitrary comment */
 	uint32_t dependency;		/* defer until this job completes */
