@@ -77,14 +77,14 @@ extern void srun_allocate (uint32_t job_id)
 	struct job_record *job_ptr = find_job_record (job_id);
 
 	xassert(job_ptr);
-	if (job_ptr && job_ptr->alloc_resp_port
-	    && job_ptr->alloc_resp_host && job_ptr->alloc_resp_host[0]) {
+	if (job_ptr && job_ptr->alloc_resp_port && job_ptr->alloc_node
+	&&  job_ptr->resp_host) {
 		slurm_addr * addr;
 		resource_allocation_response_msg_t *msg_arg;
 
 		addr = xmalloc(sizeof(struct sockaddr_in));
-		slurm_set_addr(addr, job_ptr->alloc_resp_port,
-			       job_ptr->alloc_resp_host);
+		slurm_set_addr(addr, job_ptr->alloc_resp_port, 
+			job_ptr->resp_host);
 		msg_arg = xmalloc(sizeof(resource_allocation_response_msg_t));
 		msg_arg->job_id 	= job_ptr->job_id;
 		msg_arg->node_list	= xstrdup(job_ptr->nodes);
@@ -101,7 +101,7 @@ extern void srun_allocate (uint32_t job_id)
 		msg_arg->select_jobinfo = select_g_copy_jobinfo(
 				job_ptr->select_jobinfo);
 		msg_arg->error_code	= SLURM_SUCCESS;
-		_srun_agent_launch(addr, job_ptr->alloc_resp_host, 
+		_srun_agent_launch(addr, job_ptr->alloc_node, 
 				   RESPONSE_RESOURCE_ALLOCATION, msg_arg);
 	}
 }
@@ -129,15 +129,14 @@ extern void srun_node_fail (uint32_t job_id, char *node_name)
 		return;
 	bit_position = node_ptr - node_record_table_ptr;
 
-	if (job_ptr->other_port
-	    && job_ptr->other_host && job_ptr->other_host[0]) {
+	if (job_ptr->other_port && job_ptr->alloc_node && job_ptr->resp_host) {
 		addr = xmalloc(sizeof(struct sockaddr_in));
-		slurm_set_addr(addr, job_ptr->other_port, job_ptr->other_host);
+		slurm_set_addr(addr, job_ptr->other_port, job_ptr->resp_host);
 		msg_arg = xmalloc(sizeof(srun_node_fail_msg_t));
 		msg_arg->job_id   = job_id;
 		msg_arg->step_id  = NO_VAL;
 		msg_arg->nodelist = xstrdup(node_name);
-		_srun_agent_launch(addr, job_ptr->other_host, SRUN_NODE_FAIL,
+		_srun_agent_launch(addr, job_ptr->alloc_node, SRUN_NODE_FAIL,
 				   msg_arg);
 	}
 
@@ -182,16 +181,15 @@ extern void srun_ping (void)
 		
 		if (job_ptr->job_state != JOB_RUNNING)
 			continue;
-		if ( (job_ptr->time_last_active <= old)
-		     && job_ptr->other_port
-		     && job_ptr->other_host && job_ptr->other_host[0] ) {
+		if ((job_ptr->time_last_active <= old) && job_ptr->other_port
+		&&  job_ptr->alloc_node && job_ptr->resp_host) {
 			addr = xmalloc(sizeof(struct sockaddr_in));
 			slurm_set_addr(addr, job_ptr->other_port,
-				       job_ptr->other_host);
+				job_ptr->resp_host);
 			msg_arg = xmalloc(sizeof(srun_ping_msg_t));
 			msg_arg->job_id  = job_ptr->job_id;
 			msg_arg->step_id = NO_VAL;
-			_srun_agent_launch(addr, job_ptr->other_host,
+			_srun_agent_launch(addr, job_ptr->alloc_node,
 					   SRUN_PING, msg_arg);
 		}
 	}
@@ -214,15 +212,14 @@ extern void srun_timeout (struct job_record *job_ptr)
 	if (job_ptr->job_state != JOB_RUNNING)
 		return;
 
-	if (job_ptr->other_port
-	    && job_ptr->other_host && job_ptr->other_host[0]) {
+	if (job_ptr->other_port && job_ptr->alloc_node && job_ptr->resp_host) {
 		addr = xmalloc(sizeof(struct sockaddr_in));
-		slurm_set_addr(addr, job_ptr->other_port, job_ptr->other_host);
+		slurm_set_addr(addr, job_ptr->other_port, job_ptr->resp_host);
 		msg_arg = xmalloc(sizeof(srun_timeout_msg_t));
 		msg_arg->job_id   = job_ptr->job_id;
 		msg_arg->step_id  = NO_VAL;
 		msg_arg->timeout  = job_ptr->end_time;
-		_srun_agent_launch(addr, job_ptr->other_host, SRUN_TIMEOUT,
+		_srun_agent_launch(addr, job_ptr->alloc_node, SRUN_TIMEOUT,
 				   msg_arg);
 	}
 
@@ -258,16 +255,14 @@ extern void srun_complete (struct job_record *job_ptr)
 	struct step_record *step_ptr;
 
 	xassert(job_ptr);
-	if (job_ptr->other_port
-	    && job_ptr->other_host && job_ptr->other_host[0]) {
+	if (job_ptr->other_port && job_ptr->alloc_node && job_ptr->resp_host) {
 		addr = xmalloc(sizeof(struct sockaddr_in));
-		slurm_set_addr(addr, job_ptr->other_port, job_ptr->other_host);
+		slurm_set_addr(addr, job_ptr->other_port, job_ptr->resp_host);
 		msg_arg = xmalloc(sizeof(srun_timeout_msg_t));
 		msg_arg->job_id   = job_ptr->job_id;
 		msg_arg->step_id  = NO_VAL;
-		_srun_agent_launch(addr, job_ptr->other_host, 
-				   SRUN_JOB_COMPLETE,
-				   msg_arg);
+		_srun_agent_launch(addr, job_ptr->alloc_node, 
+				   SRUN_JOB_COMPLETE, msg_arg);
 	}
 
 
